src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Territory_Manager_CRM_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</inlineHelpText>
        <label>Territory Manager - CRM 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_CRM_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</inlineHelpText>
        <label>Territory Manager - CRM 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_CRM_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CRM Division.</inlineHelpText>
        <label>Territory Manager - CRM 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_CSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the CSD Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the CSD Division.</inlineHelpText>
        <label>Territory Manager - CSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_NMD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the NMD Division.</inlineHelpText>
        <label>Territory Manager - NMD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_SI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the Structural Intervention Division</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the Structural Intervention Division</inlineHelpText>
        <label>Territory Manager - SI</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Vascular_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</inlineHelpText>
        <label>Territory Manager Vascular 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Manager_Vascular__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</description>
        <inlineHelpText>This Field displays the name of the Territory Manager assigned to this account for the Vascular Division.</inlineHelpText>
        <label>Territory Manager Vascular</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TUser11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trained_Under__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trained Under</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Trained Under)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>USD_Region__c</fullName>
        <description>Cost Center as defined in HCM</description>
        <inlineHelpText>Cost Center as defined in HCM</inlineHelpText>
        <label>USD Region</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Ranking__c</fullName>
        <label>User Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermittent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>of_Radiology_Fellows_in_Program__c</fullName>
        <label># of Radiology  Fellows in Program</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>USD_Region__c</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Physicians</fullName>
        <columns>CONTACT.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Physician</value>
        </filters>
        <label>All Physicians</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>SJM_Internal_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SJM_Employee</value>
        </filters>
        <label>SJM Internal Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Non_Physician</fullName>
        <active>true</active>
        <description>Non Physicians</description>
        <label>Non-Physician</label>
    </recordTypes>
    <recordTypes>
        <fullName>Physician</fullName>
        <active>true</active>
        <description>Physician/Practioner Records</description>
        <label>Physician/Practitioner</label>
    </recordTypes>
    <recordTypes>
        <fullName>SJM_Employee</fullName>
        <active>true</active>
        <description>SJM Employees are stored as Contacts</description>
        <label>SJM Employee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Enforce_User_to_fill_in_contact_info</fullName>
        <active>true</active>
        <description>Prevents user from not filling in one of the 5 email\phone contacts fields.</description>
        <errorConditionFormula>AND( 
OR(ISBLANK( Email )), 
OR(ISBLANK( Personal_Email__c )), 
OR(ISBLANK( Office_Phone__c )), 
OR(ISBLANK( HomePhone )), 
OR(ISBLANK( MobilePhone )), 
OR((RecordType.Name = &quot;Physician/Practitioner&quot;), 
(RecordType.Name = &quot;Non-Physician&quot;)) 
)</errorConditionFormula>
        <errorMessage>Please fill-in one of the following fields: [Email, Personal Email, Office Phone, Home Phone or Mobile]</errorMessage>
    </validationRules>
</CustomObject>